2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-chat.glade:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy/empathy-contact.c:
	* libempathy/empathy-contact.h: Adding UI to start a VoIP call. It does
	nothing yet. Most of the code is ported from Gossip patch
	(Raphael Slinckx, Xavier Claessens).

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-contact.c:
	* libempathy/empathy-contact.h:
	* libempathy/empathy-contact-factory.c: Adding capabilities contact
	property.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-store.c: Make use of the search
	function to correctly find when typing in the contact list view.
	Fixes bug #472309 (Will Thompson, Xavier Claessens).

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-log-window.c: Fix crash if there is no date 
	for a conversation. Fixes bug #473510.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathygtk/pyempathygtk.override:
	* python/pyempathygtk/pyempathygtk.defs: Updated for new API.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump libtelepathy depend to 0.0.57.

2007-09-08  Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-chat-view.h:
	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy-gtk/empathy-ui-utils.h:
	* libempathy-gtk/empathy-chat.c:
	* libempathy-gtk/empathy-smiley-manager.c:
	* libempathy-gtk/empathy-smiley-manager.h:
	* libempathy-gtk/Makefile.am:
	* libempathy-gtk/empathy-chat-window.c:
	* libempathy-gtk/empathy-chat-view.c: More dynamic smiley managment and
	more efficient algorithm to detect smileys in messages.
	Fixes bug #474167.

	* doc/: Updated
